learn/nginx/proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-nginx-webserver
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
